[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/themes/main_menu.theme" type="Theme" id=1]
[ext_resource path="res://scripts/main_menu.gd" type="Script" id=2]

[node name="MainMenuControl" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 6.10352e-05
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_left = 0.344
anchor_top = 0.25
anchor_right = 0.656
anchor_bottom = 0.75
margin_left = -0.319977
margin_right = 0.320007
margin_bottom = -6.10352e-05
rect_min_size = Vector2( 200, 200 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGameBtn" type="Button" parent="Panel/VBoxContainer"]
margin_top = 45.0
margin_right = 400.0
margin_bottom = 95.0
focus_neighbour_top = NodePath("../QuitBtn")
focus_neighbour_bottom = NodePath("../TutorialBtn")
text = "NEW GAME"

[node name="TutorialBtn" type="Button" parent="Panel/VBoxContainer"]
margin_top = 110.0
margin_right = 400.0
margin_bottom = 160.0
focus_neighbour_top = NodePath("../NewGameBtn")
focus_neighbour_bottom = NodePath("../LeaderboardBtn")
text = "TUTORIAL"

[node name="LeaderboardBtn" type="Button" parent="Panel/VBoxContainer"]
margin_top = 175.0
margin_right = 400.0
margin_bottom = 225.0
focus_neighbour_top = NodePath("../TutorialBtn")
focus_neighbour_bottom = NodePath("../OptionsBtn")
text = "LEADERBOARD"

[node name="OptionsBtn" type="Button" parent="Panel/VBoxContainer"]
margin_top = 240.0
margin_right = 400.0
margin_bottom = 290.0
focus_neighbour_top = NodePath("../LeaderboardBtn")
focus_neighbour_bottom = NodePath("../QuitBtn")
text = "OPTIONS"

[node name="QuitBtn" type="Button" parent="Panel/VBoxContainer"]
margin_top = 305.0
margin_right = 400.0
margin_bottom = 355.0
focus_neighbour_top = NodePath("../OptionsBtn")
focus_neighbour_bottom = NodePath("../NewGameBtn")
text = "QUIT"
[connection signal="pressed" from="Panel/VBoxContainer/NewGameBtn" to="." method="on_new_game_started"]
[connection signal="pressed" from="Panel/VBoxContainer/TutorialBtn" to="." method="on_tutorial_started"]
[connection signal="pressed" from="Panel/VBoxContainer/LeaderboardBtn" to="." method="on_leaderboard_opened"]
[connection signal="pressed" from="Panel/VBoxContainer/OptionsBtn" to="." method="on_options_opened"]
[connection signal="pressed" from="Panel/VBoxContainer/QuitBtn" to="." method="on_quit_game"]
